# DustEar

./: Dockerfile  LICENSE  compose.yml  meson.build
assets/: dustear.rc
assets/style_sheets/: darkstyle.qss
configs/: vanilla.json
include/: meson.build
include/driver/: meson.build  network.h
include/driver/posix/: udp.h
include/driver/windows/: meson.build  udp.h
include/gui/: meson.build
include/gui/model/: event_bus.h  meson.build
include/gui/model/driver/: daq.h  meson.build
include/gui/model/general_purpose/: logging.h  meson.build
include/gui/model/measurement/: configuration.h  meson.build  processing.h
include/gui/presenter/: meson.build
include/gui/presenter/general_purpose/: logging.h  meson.build  progress_bar.h  status_bar.h  toolbar.h
include/gui/presenter/settings/: calculation_method.h  filter.h  general.h  measurement.h  meson.build
include/gui/presenter/tabs/: distribution.h  meson.build  time_series.h
include/gui/view/: main_window.h  meson.build
include/gui/view/charts/: chart.h  heatmap.h  histogram.h  line_chart.h  matplotlib_colours.h  meson.build
include/gui/view/general_purpose/: logging.h  matplotlib_colours.h  meson.build  progress_bar.h  status_bar.h  toolbar.h
include/gui/view/interface/: meson.build
include/gui/view/interface/general_purpose/: logging.h  meson.build  progress_bar.h  status_bar.h  toolbar.h
include/gui/view/interface/settings/: calculation_method.h  filter.h  general.h  measurement.h  measurement_old.h  meson.build
include/gui/view/interface/tabs/: distribution.h  meson.build  time_series.h
include/gui/view/settings/: calculation_method.h  filter.h  general.h  measurement.h  meson.build  window.h
include/gui/view/tabs/: distribution.h  time_series.h
include/gui/view/widgets/: animated_toggle.hpp  meson.build  toggle.hpp
include/gui/view_trash/: main_window.h  measurement.h
include/gui/view_trash/general_purpose/: logging.h  meson.build  state_button.h
include/gui/view_trash/interface/: meson.build
include/gui/view_trash/interface/general_purpose/: logging.h  state_button.h
include/gui/view_trash/interface/settings/: measurement.h  meson.build
include/gui/view_trash/interface/tabs/: home.h  meson.build
include/gui/view_trash/settings/: measurement.h  meson.build  window.h
include/gui/view_trash/tabs/: home.h  meson.build
include/helper/: double_buffer.hpp  event_bus.h  fft.h  histogram.h  logging.h  meson.build  ring_buffer.h  signal_processing.hpp  thread.h
include/processing/: anomaly_check.h  clean_dirty_check.h  event_bus.h  frequency_tracking.h  meson.build  pipeline.h
include/processing/detection/: correlation.h  meson.build  trigger_level.h
include/processing/filter/: butterworth.h  meson.build  sinc.h
include/processing/parameter_calculation/: estimation.h  least_squares.h  meson.build
include/processing/parameter_calculation/lsq/: functions.h  meson.build
pydustear/: dustear.pyd  dustear.pyi
src/: main.cpp  meson.build
src/driver/: meson.build
src/driver/posix/: meson.build  udp.cpp
src/driver/windows/: meson.build  udp.cpp
src/gui/: meson.build
src/gui/model/: event_bus.cpp  meson.build
src/gui/model/driver/: daq.cpp  meson.build
src/gui/model/general_purpose/: logging.cpp  meson.build
src/gui/model/measurement/: configuration.cpp  meson.build  processing.cpp
src/gui/presenter/: meson.build
src/gui/presenter/general_purpose/: logging.cpp  meson.build  progress_bar.cpp  status_bar.cpp  toolbar.cpp
src/gui/presenter/settings/: calculation_method.cpp  filter.cpp  general.cpp  measurement.cpp  meson.build
src/gui/presenter/tabs/: distribution.cpp  meson.build  time_series.cpp
src/gui/view/: main_window.cpp  meson.build
src/gui/view/charts/: chart.cpp  heatmap.cpp  histogram.cpp  histogramwidget.cpp  line_chart.cpp  meson.build
src/gui/view/general_purpose/: logging.cpp  meson.build  progress_bar.cpp  status_bar.cpp  toolbar.cpp
src/gui/view/settings/: calculation_method.cpp  filter.cpp  general.cpp  measurement.cpp  meson.build  window.cpp
src/gui/view/tabs/: distribution.cpp  meson.build  time_series.cpp
src/processing/: anomaly_check.cpp  event_bus.cpp  meson.build  pipeline.cpp
src/processing/detection/: meson.build  trigger_level.cpp
src/processing/filter/: butterworth.cpp  meson.build  sinc.cpp
src/processing/parameter_calculation/: estimation.cpp  meson.build
src/processing/parameter_calculation/lsq/: functions.cpp  meson.build
src/python_binding/: meson.build  python.cpp
tests/: main.cpp  meson.build
tests/configs/: vanilla.json
tests/data/: matlab_10um.txt
