general_purpose_source = files('logging.cpp')
project_sources += general_purpose_source

deps = [
]


general_purpose_lib = static_library('general_purpose',
                                     general_purpose_source,
                                     include_directories : inc,
                                     dependencies : deps)
